# mixi-cut

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROTOCOL.md  README.md  SECURITY.md  benchmark.py  generate.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_test.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmark_results/: bench_20260409_000602.json
decoder_c/: CMakeLists.txt
decoder_c/include/: mixi_decoder.h
decoder_c/src/: mixi_decoder.c
decoder_c/test/: test_decoder.c
decoder_rust/: Cargo.toml
decoder_rust/src/: lib.rs
docs/: COMPARISON.md  DECODER_GUIDE.md  index.md  protocol.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css  index.mjs
docs/api/: cli.md  frame.md  index.md
docs/demo/: app.js  index.html  index.md  style.css
docs/demo/fonts/: fonts.css
docs/guide/: cutting.md  decoder.md  dj.md  hardware.md  index.md  installation.md  quickstart.md
docs/public/live/: app.js  index.html  style.css
src/mixi_cut/: __init__.py  carrier.py  cli.py  decoder.py  encoder.py  generator.py  gf256.py  protocol.py  verifier.py
tests/: test_carrier.py  test_cli.py  test_coverage.py  test_decoder.py  test_encoder.py  test_gf256.py  test_roundtrip.py
